--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,14 +4,21 @@
     <head>
         <link rel="icon" href="/images/favico.png">
         <link rel="stylesheet" href="/css/styles.css" />
-        <script src="/js/app.js"></script>
     </head>
     <body>
         <div class="main-content">
             {{>header}}
             <p>Use this site to get your weather</p>
+
+            <form>
+                <input type="text" placeholder="Location">
+                <button>Search</button>
+            </form>
+            <p id="messageOne"></p>
+            <p id="messageTwo"></p>
         </div>
         
         {{>footer}}
+        <script src="/js/app.js"></script>
     </body>
 </html>
